--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "audit:fix": "npm audit fix",
+    "audit:force": "npm audit fix --force"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
